# php-rabbit-rs

./: .gitignore  CRUSH.md  Cargo.toml  feature_parity_strategy.md  readme.md  run-benchmarks.sh  run-test.sh
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  publish-composer-plugin.yml  release.yml
docker/: README.md
docker/linux-alpine/: Dockerfile
docker/linux-gnu/: Dockerfile
php/benchmarks/: README.md  composer.json  docker-compose.yml
php/benchmarks/src/: AbstractBenchmark.php  AmqplibAutoAckBenchmark.php  AmqplibBatchConfirmBenchmark.php  AmqplibFireAndForgetBenchmark.php  BunnyAutoAckBenchmark.php  BunnyBatchConfirmBenchmark.php  BunnyFireAndForgetBenchmark.php  Config.php  PhpAmqpExtAutoAckBenchmark.php  PhpAmqpExtBatchConfirmBenchmark.php  PhpAmqpExtFireAndForgetBenchmark.php  RabbitRsAutoAckBenchmark.php  RabbitRsBatchConfirmBenchmark.php  RabbitRsFireAndForgetBenchmark.php  run-benchmarks.php
php/composer-plugin/: README.md  composer.json
php/composer-plugin/src/: BinaryInstaller.php  Platform.php  Plugin.php
php/composer-plugin/stubs/: RabbitRs.stubs.php
php/tests/: composer.json
php/tests/tests/: Pest.php
scripts/: common.sh  package-extension.sh
src/: lib.rs
src/core/: mod.rs  runtime.rs
src/core/channels/: channel.rs  channel_acker.rs  channel_exchange.rs  channel_publisher.rs  channel_queue.rs  message.rs  mod.rs
src/core/connections/: connection_client.rs  connection_options.rs  connection_pool.rs  connection_tls.rs  (+1 more)
src/php/: auto_qos.rs  channel.rs  client.rs  delivery.rs  message.rs  mod.rs  parsers.rs
(+10 files in other folders)
